--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <div class="column"></div>
 
     <!-- Center content column -->
-    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-two-thirds-desktop is-two-thirds-widescreen is-two-thirds-fullhd">
+    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
 
       <nav class="navbar" role="navigation" aria-label="main navigation">
 
@@ -78,7 +78,5 @@
     </script>
 
   </div>
-
-  <br>
 
 </header>
