--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,25 +2,37 @@
 layout: default
 ---
 
-{% for p in site.categories.blog %}
+{% for p in site.posts limit: 4 %}
 
-    <div class="columns">
-      {% if p.image and p.image != '' %}
-        <div class="column is-one-third">
-          <figure class = "figure">
-            <img src="{{ p.image }}" alt="">
-          </figure>
-        </div>
-      {% endif %}
+  <div class="columns">
 
-      <div class="column">
-        <!-- Post title, centered on page -->
-        <div class="container">
-          <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
-          <p>{{ p.date | date: "%B %-d, %Y" }}</p>
-          <p>{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
-        </div>
+    {% if p.image and p.image != '' %}
+
+      <div class="column is-one-third">
+        <figure class = "figure">
+          <img src="{{ p.image }}" alt="">
+        </figure>
       </div>
+
+    {% endif %}
+
+    {% capture wordcount %}
+      {{ p.content | number_of_words }}
+    {% endcapture %}
+
+    <div class="column">
+
+      <!-- Post title -->
+      <div class="container">
+        <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+        <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
+        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
+      </div>
+
     </div>
+
+  </div>
+
+  <hr style="margin: 0 0 2em">
 
 {% endfor %}
