--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,74 +2,37 @@
 layout: default
 ---
 
-<div class="columns">
-  <div class="column">
+{% for p in site.posts limit: 4 %}
 
-    {% for p in site.posts limit: 4 %}
+  <div class="columns">
 
-      <div class="columns">
+    {% if p.image and p.image != '' %}
 
-        {% if p.image and p.image != '' %}
-
-          <div class="column is-one-third">
-            <figure class = "figure">
-              <img src="{{ p.image }}" alt="">
-            </figure>
-          </div>
-
-        {% endif %}
-
-        {% capture wordcount %}
-          {{ p.content | number_of_words }}
-        {% endcapture %}
-
-        <div class="column">
-
-          <!-- Post title -->
-          <div class="container">
-            <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
-            <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
-            <p>{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
-          </div>
-
-        </div>
-
+      <div class="column is-one-third">
+        <figure class = "figure">
+          <img src="{{ p.image }}" alt="">
+        </figure>
       </div>
 
-    {% endfor %}
+    {% endif %}
+
+    {% capture wordcount %}
+      {{ p.content | number_of_words }}
+    {% endcapture %}
+
+    <div class="column">
+
+      <!-- Post title -->
+      <div class="container">
+        <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+        <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
+        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
+      </div>
+
+    </div>
 
   </div>
 
-  <div class="column is-one-third">
+  <hr style="margin: 0 0 2em">
 
-    <p style="margin: 0 0 0.2em">Archive</p>
-
-      {% for post in site.posts %}
-
-        <p class="is-size-7" style="margin: 0 1em 0">
-          <a href={{ post.url }}>
-            {{ post.title }}
-          </a>
-          &middot
-          {{ post.date | date: "%Y-%m-%d" }}
-        </p>
-
-      {% endfor %}
-
-
-    <br>
-
-    <p style="margin: 0 0 0.2em">Extracurriculars</p>
-
-    {% for link in site.data.links %}
-
-      <p class="is-size-7" style="margin: 0 1em 0">
-        <a href={{ link.url }}>
-          {{ link.title }}
-        </a>
-      </p>
-
-    {% endfor %}
-
-  </div>
-</div>
+{% endfor %}
