--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,12 +10,14 @@ layout: default
 <div class="container" style="text-align:center">
   <p class="title is-4">{{ page.title }}</p>
   <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
-  <!-- <p class="subtitle is-6"></p> -->
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
 <div class="container">
   {{ content }}
 </div>
+
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <hr>
 
