--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,43 @@
 layout: default
 ---
 
+
+<!-- Meta -->
+<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+<meta property="og:site_name" content="{{ site.title }}">
+
+{% if page.title %}
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="og:type" content="article">
+  <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
+{% else %}
+  <meta property="og:title" content="{{ site.title }}">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="{{ site.description }}">
+{% endif %}
+
+{% if page.date %}
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+  <meta property="article:author" content="{{ site.url }}/about/">
+{% endif %}
+
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+
+{% if page.tags %}
+  <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
+
+  {% for tag in page.tags %}
+    <meta property="article:tag" content="{{ tag }}">
+  {% endfor %}
+
+{% endif %}
+
+{% if author %}
+  <meta property="article:author" content="{{ author.name }}" />
+{% endif %}
+
+
 <!-- Post -->
 {% if page.image %}
   <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 0px 0px;" align ="left">
@@ -10,16 +47,19 @@ layout: default
 <div class="container" style="text-align:center">
   <p class="title is-4">{{ page.title }}</p>
   <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
-  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
 <div class="container">
   {{ content }}
 </div>
 
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <hr>
+
 
 <!-- Paginator -->
 <div class="columns is-mobile">
