--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,10 @@ layout: default
   <meta property="og:description" content="{{ site.description }}">
 {% endif %}
 
+{% if page.image %}
+  <meta property="og:image" content="{{ page.image }}">
+{% endif %}
+
 {% if page.date %}
   <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
   <meta property="article:author" content="{{ site.url }}/about/">
@@ -41,7 +45,7 @@ layout: default
 
 <!-- Post -->
 {% if page.image %}
-  <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 0px 0px;" align ="left">
+  <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 20px 0px;" align ="left">
 {% endif %}
 
 <div class="container" style="text-align:center">
