--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: default
 
 {% if page.image %}
   <meta property="og:image" content="{{ page.image }}">
+  <meta property="twitter:image" content="{{ page.image }}">
 {% endif %}
 
 {% if page.date %}
