--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,99 +2,107 @@
 layout: default
 ---
 
+<head>
 
-<!-- Meta -->
-<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <title>{{ page.title }}</title>
 
-<meta property="og:site_name" content="{{ site.title }}">
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-{% if page.title %}
-  <meta property="og:title" content="{{ page.title }}">
-  <meta property="og:type" content="article">
-  <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
-{% else %}
-  <meta property="og:title" content="{{ site.title }}">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="{{ site.description }}">
-{% endif %}
+  <meta property="og:site_name" content="{{ site.title }}">
 
-{% if page.image %}
-  <meta property="og:image" content="{{ page.image }}">
-  <meta property="twitter:image" content="{{ page.image }}">
-{% endif %}
+  {% if page.title %}
 
-{% if page.date %}
-  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
-  <meta property="article:author" content="{{ site.url }}/about/">
-{% endif %}
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
+  {% else %}
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="{{ site.description }}">
+  {% endif %}
 
-<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  {% if page.image %}
+    <meta property="og:image" content="{{ page.image }}">
+    <meta property="twitter:image" content="{{ page.image }}">
+  {% endif %}
 
-{% if page.tags %}
-  <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
+  {% if page.date %}
+    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+    <meta property="article:author" content="{{ site.url }}/about/">
+  {% endif %}
 
-  {% for tag in page.tags %}
-    <meta property="article:tag" content="{{ tag }}">
-  {% endfor %}
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 
-{% endif %}
+  {% if page.tags %}
+    <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
 
-{% if author %}
-  <meta property="article:author" content="{{ author.name }}" />
-{% endif %}
+    {% for tag in page.tags %}
+      <meta property="article:tag" content="{{ tag }}">
+    {% endfor %}
+
+  {% endif %}
+
+  {% if author %}
+    <meta property="article:author" content="{{ author.name }}" />
+  {% endif %}
+
+</head>
 
 
-<!-- Post -->
-{% if page.image %}
-  <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 20px 0px;" align ="left">
-{% endif %}
+<body>
 
-<div class="container" style="text-align:center">
-  <p class="title is-4">{{ page.title }}</p>
-  <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+  <!-- Post -->
+  {% if page.image %}
+    <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 20px 0px;" align ="left">
+  {% endif %}
+
+  <div class="container" style="text-align:center">
+    <p class="title is-4">{{ page.title }}</p>
+    <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+
+  <div class="container">
+    {{ content }}
+  </div>
+
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</div>
 
-<div class="container">
-  {{ content }}
-</div>
-
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-<hr>
+  <hr>
 
 
-<!-- Paginator -->
-<div class="columns is-mobile">
+  <!-- Paginator -->
+  <div class="columns is-mobile">
 
-  <div class="column">
-    {% if page.previous.url %}
-      <!-- <p class="title is-4">Previous Post</p> -->
-      <div class="container">
-        <a href="{{ page.previous.url | prepend: site.baseurl }}">
-          <p class="title is-5">
-            {{ page.previous.title }}
-          </p>
-        </a>
-        <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
-      </div>
-    {% endif %}
+    <div class="column">
+      {% if page.previous.url %}
+        <!-- <p class="title is-4">Previous Post</p> -->
+        <div class="container">
+          <a href="{{ page.previous.url | prepend: site.baseurl }}">
+            <p class="title is-5">
+              {{ page.previous.title }}
+            </p>
+          </a>
+          <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
+        </div>
+      {% endif %}
+    </div>
+
+    <div class="column">
+      {% if page.next.url %}
+        <!-- <p class="title is-4">Next Post</p> -->
+        <div class="container" style="text-align:right">
+          <a href="{{ page.next.url | prepend: site.baseurl }}">
+            <p class="title is-5">
+              {{ page.next.title }}
+            </p>
+          </a>
+          <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
+        </div>
+      {% endif %}
+    </div>
+
   </div>
-
-  <div class="column">
-    {% if page.next.url %}
-      <!-- <p class="title is-4">Next Post</p> -->
-      <div class="container" style="text-align:right">
-        <a href="{{ page.next.url | prepend: site.baseurl }}">
-          <p class="title is-5">
-            {{ page.next.title }}
-          </p>
-        </a>
-        <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
-      </div>
-    {% endif %}
-  </div>
-
-</div>
+</body>
