--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,12 +10,19 @@ layout: default
 
   <meta property="og:site_name" content="{{ site.title }}">
 
+  <meta name="twitter:card" content="summary" />
+
   {% if page.title %}
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html }}" />
 
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:type" content="article">
     <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
   {% else %}
+    <meta name="twitter:title" content="{{ site.title }}" />
+    <meta name="twitter:description" content="{{ site.description | strip_html }}" />
+
     <meta property="og:title" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:description" content="{{ site.description }}">
