--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,13 +66,7 @@ layout: default
     </div>
 
     <div class="container" align="center">
-      <audio controls>
-        <source src="{{ page.audio }}" type="audio/mpeg">
-        Unsupported browser.
-      </audio>
-
-        <p style="margin: 0 0 0 0">Or listen on <a target="_blank" href="{{ page.anchor_link }}">anchor.fm</a></p>
-
+      <a class="button is-success" target="_blank" href="{{ page.anchor_link }}">Listen Now</a>
     </div>
 
     <br>
