--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,12 +15,9 @@
 
         <div class="navbar-brand">
 
-          <div class="container">
-            <div class="container">
-              <a class="title is-3" href="/">{{ site.title }}</a>
-            </div>
+          <div class="navbar-item">
+            <a class="title is-3" href="/">{{ site.title }}</a>
           </div>
-
 
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
@@ -33,7 +30,13 @@
           <div class="navbar-end">
             {% for page in site.data.pages %}
               {% if page.external %}
-                <a class="navbar-item" target="_blank" href="{{ page.link }}">{{ page.name }}</a>
+                {% if page.button %}
+                  <div class="navbar-item">
+                    <a class="button is-success" target="_blank" href="{{ page.link }}">{{ page.name }}</a>
+                  </div>
+                {% else %}
+                  <a class="navbar-item" target="_blank" href="{{ page.link }}">{{ page.name }}</a>
+                {% endif %}
               {% else %}
                 <a class="navbar-item" href="{{ page.link }}">{{ page.name }}</a>
               {% endif %}
