--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,16 +4,20 @@ layout: default
 
 {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
 {% for i in (1..rows) %}
-  {% assign offset = forloop.index0 | times: 2 %}
+  {% assign offset = forloop.index0 | times: 2 | plus: 1 %}
 
   <div class="columns">
     {% for post in site.posts limit:2 offset:offset %}
       <div class="column">
-        <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
-        <p style="margin: 0 0 0;">{{ post.date | date: "%B %-d, %Y" }}</p>
-        <p style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 100 }}</p>
+        <div class="container has-text-centered">
+          <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
+          <p class="is-size-6" style="margin: 0 0 0.5em">{{ post.date | date: "%B %-d, %Y" }}</p>
+        </div>
+        <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 200 }}</p>
       </div>
     {% endfor %}
   </div>
+
+  <br>
 
 {% endfor %}
