--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,6 @@
 layout: default
 ---
 
-
-
 {% for p in site.posts limit: 1 %}
 
   <div class="columns">
@@ -11,10 +9,10 @@ layout: default
     {% if p.image and p.image != '' %}
 
       <div class="column is-one-third">
-      <figure class = "figure">
-        <img src="{{ p.image }}" alt="">
-      </figure>
-    </div>
+        <figure class = "figure">
+          <img src="{{ p.image }}" alt="">
+        </figure>
+      </div>
 
     {% endif %}
 
@@ -25,11 +23,12 @@ layout: default
     <div class="column">
 
       <!-- Post title -->
-      <div class="container">
+      <div class="container has-text-centered">
         <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
         <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
-        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 350 }}</p>
       </div>
+      <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 350 }}</p>
+
 
     </div>
 
@@ -37,20 +36,24 @@ layout: default
 
 {% endfor %}
 
-<hr>
+<br>
 
-{% assign rows = 2 %}
+{% assign rows = 3 %}
 {% for i in (1..rows) %}
   {% assign offset = forloop.index0 | times: 2 | plus: 1 %}
 
   <div class="columns">
     {% for post in site.posts limit:2 offset:offset %}
       <div class="column">
-        <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
-        <p style="margin: 0 0 0;">{{ post.date | date: "%B %-d, %Y" }}</p>
-        <p style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 100 }}</p>
+        <div class="container has-text-centered">
+          <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
+          <p class="is-size-6" style="margin: 0 0 0.5em">{{ post.date | date: "%B %-d, %Y" }}</p>
+        </div>
+        <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 200 }}</p>
       </div>
     {% endfor %}
   </div>
+
+  <br>
 
 {% endfor %}
