--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -50,7 +50,7 @@ layout: default
 
       <div class="field">
         <div class="control">
-          <button type="submit" class="button is-link">Submit</button>
+          <button type="submit" class="button is-link is-success">Submit</button>
         </div>
       </div>
 
