--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ layout: default
 <body>
 
   <!-- Post -->
-  {% if page.audio %}
+  {% if page.anchor_link %}
 
     <div class="container" style="text-align:center">
       <p class="title is-4">{{ page.title }}</p>
