--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@ layout: default
 
     <div class="container" style="text-align:center">
       <p class="title is-4">{{ page.title }}</p>
-      <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+      <p class="subtitle is-6">{{ page.date | date: "%B %-d, %Y" }}</p>
     </div>
 
     {% if page.image %}
