--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,9 @@ layout: default
 
 <br>
 
+<div class="container">
+
+
 {% for p in site.posts limit: 1 %}
 
   <div class="columns">
@@ -62,3 +65,5 @@ layout: default
   </div>
 
 {% endfor %}
+
+</div>
