--- a/_includes/body.html
+++ b/_includes/body.html
@@ -9,8 +9,10 @@
       <div class="column"></div>
 
       <!-- Center content column -->
-      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
-        {{ content }}
+      <div class="column is-full-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+        <div class="container">
+          {{ content }}
+        </div>
       </div>
 
       <!-- Filler column -->
