--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,9 @@ layout: default
 
 {% endfor %}
 
-<br>
+<div class="container has-text-centered">
+  <p>&middot &middot &middot</p>
+</div>
 
 {% assign rows = 3 %}
 {% for i in (1..rows) %}
