--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="container has-text-centered">
     <a href="{{ site.baseurl }}/feed.xml">
       <figure class="image is-24x24 is-inline-block">
-        <img src="{{site.baseurl}}/assets/img/rss_icon.png" alt="Subscribe via RSS" />
+        <img src="{{site.baseurl}}/assets/img/rss_icon.png">
       </figure>
     </a>
   </div>
