--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,13 @@
 
-<footer>
-
-  <div class="columns is-mobile">
-
-    <!-- Filler column -->
-    <div class="column"></div>
-
-    <!-- Center content column -->
-    <div class="column is-full-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
-      <div class="container has-text-centered">
-        <a href="{{ site.baseurl }}/feed.xml">
-          <figure class="image is-24x24 is-inline-block">
-            <img src="{{site.baseurl}}/assets/img/rss_icon.png">
-          </figure>
-        </a>
-      </div>
-    </div>
-
-    <!-- Filler column -->
-    <div class="column"></div>
+<footer class="footer has-background-white">
+  <div class="container has-text-centered">
+    <!-- RSS Feed -->
+    <a href="{{ site.baseurl }}/feed.xml">
+      <figure class="image is-24x24 is-inline-block">
+        <img src="{{site.baseurl}}/assets/img/rss_icon.png">
+      </figure>
+    </a>
+    <p>&#169; 2020, Chris Carter</p>
   </div>
-
   <br>
-
 </footer>
