--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,70 +2,67 @@
 layout: default
 ---
 
-<br>
+<section class="section">
 
-<div class="container">
+  {% for p in site.posts limit: 1 %}
 
+    <div class="columns">
 
-{% for p in site.posts limit: 1 %}
+      {% if p.image and p.image != '' %}
 
-  <div class="columns">
+        <div class="column is-one-third">
+          <figure class = "figure">
+            <img src="{{ p.image }}" alt="">
+          </figure>
+        </div>
 
-    {% if p.image and p.image != '' %}
-
-      <div class="column is-one-third">
-        <figure class = "figure">
-          <img src="{{ p.image }}" alt="">
-        </figure>
-      </div>
-
-    {% endif %}
-
-    {% capture wordcount %}
-      {{ p.content | number_of_words }}
-    {% endcapture %}
-
-    <div class="column">
-
-      <!-- Post title -->
-      <div class="container has-text-centered">
-        <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
-        <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
-      </div>
-      <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 350 }}</p>
-
-
-    </div>
-
-  </div>
-
-{% endfor %}
-
-<div class="container has-text-centered">
-  <p>&middot &middot &middot</p>
-</div>
-
-{% assign rows = 3 %}
-{% for i in (1..rows) %}
-  {% assign offset = forloop.index0 | times: 2 | plus: 1 %}
-
-  <div class="columns">
-    {% for post in site.posts limit:2 offset:offset %}
+      {% endif %}
 
       {% capture wordcount %}
-        {{ post.content | number_of_words }}
+        {{ p.content | number_of_words }}
       {% endcapture %}
 
       <div class="column">
+
+        <!-- Post title -->
         <div class="container has-text-centered">
-          <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
-          <p class="is-size-6" style="margin: 0 0 0.5em">{{ post.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
+          <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+          <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
         </div>
-        <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 200 }}</p>
+        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 350 }}</p>
+
+
       </div>
-    {% endfor %}
+
+    </div>
+
+  {% endfor %}
+
+  <div class="container has-text-centered">
+    <p>&middot &middot &middot</p>
   </div>
 
-{% endfor %}
+  {% assign rows = 3 %}
+  {% for i in (1..rows) %}
+    {% assign offset = forloop.index0 | times: 2 | plus: 1 %}
 
-</div>
+    <div class="columns">
+      {% for post in site.posts limit:2 offset:offset %}
+
+        {% capture wordcount %}
+          {{ post.content | number_of_words }}
+        {% endcapture %}
+
+        <div class="column">
+          <div class="container has-text-centered">
+            <a class="title is-6" href="{{ post.url }}">{{ post.title }}</a>
+            <p class="is-size-6" style="margin: 0 0 0.5em">{{ post.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
+          </div>
+          <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 200 }}</p>
+        </div>
+      {% endfor %}
+    </div>
+
+  {% endfor %}
+
+</section>
