--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,122 +2,77 @@
 layout: default
 ---
 
+<!-- Post metadata -->
 <head>
-
-  <title>{{ page.title }}</title>
-
-  <meta property="og:site_name" content="{{ site.title }}">
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:card" content="summary" />
-
-  {% if page.title %}
-    <meta name="twitter:title" content="{{ page.title }}" />
-    <meta name="twitter:description" content="{{ page.excerpt | strip_html }}" />
-
-    <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:type" content="article">
-    <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
-  {% else %}
-    <meta name="twitter:title" content="{{ site.title }}" />
-    <meta name="twitter:description" content="{{ site.description | strip_html }}" />
-
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="{{ site.description }}">
-  {% endif %}
-
-  {% if page.image %}
-    <meta property="twitter:image" content="{{ page.image }}">
-
-    <meta property="og:image" content="{{ page.image }}">
-  {% endif %}
-
-  {% if page.date %}
-    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
-    <meta property="article:author" content="{{ site.url }}/about/">
-  {% endif %}
-
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-
-  {% if page.tags %}
-    <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
-
-    {% for tag in page.tags %}
-      <meta property="article:tag" content="{{ tag }}">
-    {% endfor %}
-
-  {% endif %}
-
-  {% if author %}
-    <meta property="article:author" content="{{ author.name }}" />
-  {% endif %}
-
+  {% include meta.html %}
 </head>
 
+<section class="section">
+  <!-- Post header: title, author, date, anchor link if applicable -->
+  <header>
+    {% if page.anchor_link %}
 
-<body>
+      <div class="container" style="text-align:center">
+        <p class="title is-4">{{ page.title }}</p>
+        <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+      </div>
 
-  <!-- Post -->
-  {% if page.anchor_link %}
+      <div class="container" align="center">
+        <a class="button is-success" target="_blank" href="{{ page.anchor_link }}">Listen Now</a>
+      </div>
 
-    <div class="container" style="text-align:center">
-      <p class="title is-4">{{ page.title }}</p>
-      <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
-    </div>
+      <br>
 
-    <div class="container" align="center">
-      <a class="button is-success" target="_blank" href="{{ page.anchor_link }}">Listen Now</a>
-    </div>
+    {% else %}
 
-    <br>
+      <div class="container" style="text-align:center">
+        <p class="title is-4">{{ page.title }}</p>
+        <p class="subtitle is-6">{{ page.date | date: "%B %-d, %Y" }}</p>
+      </div>
 
-  {% else %}
+      {% if page.image %}
+        <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 20px 0px;" align ="left">
+      {% endif %}
 
-    <div class="container" style="text-align:center">
-      <p class="title is-4">{{ page.title }}</p>
-      <p class="subtitle is-6">{{ page.date | date: "%B %-d, %Y" }}</p>
-    </div>
-
-    {% if page.image %}
-      <img src="{{ page.image }}" alt="{{ page.caption }}" style="width:300px; margin: 0px 20px 20px 0px;" align ="left">
     {% endif %}
+  </header>
 
-  {% endif %}
+  <!-- Post body: content and paginator -->
+  <body>
 
-  <div class="container">
     {{ content }}
-  </div>
 
-  <hr>
+    <hr>
 
-  <!-- Paginator -->
-  <div class="columns is-mobile">
+    <!-- Paginator -->
+    <div class="columns is-mobile">
 
-    <div class="column">
-      {% if page.previous.url %}
-        <div class="container">
-          <a href="{{ page.previous.url | prepend: site.baseurl }}">
-            <p class="title is-5" style="margin: 0 0 0 0">
-              {{ page.previous.title }}
-            </p>
-          </a>
-          <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
-        </div>
-      {% endif %}
+      <div class="column">
+        {% if page.previous.url %}
+          <div class="container">
+            <a href="{{ page.previous.url | prepend: site.baseurl }}">
+              <p class="title is-5" style="margin: 0 0 0 0">
+                {{ page.previous.title }}
+              </p>
+            </a>
+            <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
+          </div>
+        {% endif %}
+      </div>
+
+      <div class="column">
+        {% if page.next.url %}
+          <div class="container" style="text-align:right">
+            <a href="{{ page.next.url | prepend: site.baseurl }}">
+              <p class="title is-5" style="margin: 0 0 0 0">
+                {{ page.next.title }}
+              </p>
+            </a>
+            <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
+          </div>
+        {% endif %}
+      </div>
+
     </div>
-
-    <div class="column">
-      {% if page.next.url %}
-        <div class="container" style="text-align:right">
-          <a href="{{ page.next.url | prepend: site.baseurl }}">
-            <p class="title is-5" style="margin: 0 0 0 0">
-              {{ page.next.title }}
-            </p>
-          </a>
-          <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
-        </div>
-      {% endif %}
-    </div>
-
-  </div>
-</body>
+  </body>
+</section>
