--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <img src="{{site.baseurl}}/assets/img/rss_icon.png">
       </figure>
     </a>
-    <p>&#169; 2020, Chris Carter</p>
+    <!-- <p>&#169; 2020, Chris Carter</p> -->
   </div>
   <br>
 </footer>
