--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,10 +26,10 @@ layout: default
 
         <!-- Post title -->
         <div class="container has-text-centered">
-          <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+          <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
           <p>{{ p.date | date: "%B %-d, %Y" }} &middot {{ wordcount | divided_by: 200 }} min read</p>
         </div>
-        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 350 }}</p>
+        <p style="margin: 0 0 0;">{{ p.content | strip_html | strip_newlines | truncate: 300 }}</p>
 
 
       </div>
@@ -38,9 +38,9 @@ layout: default
 
   {% endfor %}
 
-  <div class="container has-text-centered">
+  <!-- <div class="container has-text-centered">
     <p>&middot &middot &middot</p>
-  </div>
+  </div> -->
 
   {% assign rows = 3 %}
   {% for i in (1..rows) %}
