--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -6,10 +6,10 @@ layout: default
 
 <br>
 
-<div class="columns">
+<div class="columns is-mobile">
   <div class="column"></div>
 
-  <div class="column is-half">
+  <div class="column is-two-thirds">
     <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
       <div class="field">
         <label class="label">Name</label>
