--- a/assets/css/mystyles.css
+++ b/assets/css/mystyles.css
@@ -3954,7 +3954,7 @@ a.navbar-item,
   .navbar {
     min-height: 3.25rem; }
     .navbar.is-spaced {
-      padding: 1rem 2rem; }
+      padding: 1rem 4em; }
       .navbar.is-spaced .navbar-start,
       .navbar.is-spaced .navbar-end {
         align-items: center; }
