--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<section class="section">
+
 {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
 {% for i in (1..rows) %}
   {% assign offset = forloop.index0 | times: 2 | plus: 0 %}
@@ -24,3 +26,5 @@ layout: default
   </div>
 
 {% endfor %}
+
+</section>
