--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 
-<footer class="footer has-background-white">
+<footer style="padding: 1rem 3rem" class="footer has-background-white">
   <div class="container has-text-centered">
+
     <!-- RSS Feed -->
     <a href="{{ site.baseurl }}/feed.xml">
       <figure class="image is-24x24 is-inline-block">
         <img src="{{site.baseurl}}/assets/img/rss_icon.png">
       </figure>
     </a>
-    <!-- <p>&#169; 2020, Chris Carter</p> -->
+
   </div>
-  <br>
 </footer>
