--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -49,8 +49,8 @@ layout: default
       <br>
 
       <div class="field">
-        <div class="control">
-          <button type="submit" class="button is-link is-success">Submit</button>
+        <div class="control has-text-centered">
+          <button type="submit" class="button">Submit</button>
         </div>
       </div>
 
