--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@ layout: default
             <p class="is-size-6" style="margin: 0 0 0.5em">
               {{ post.date | date: "%B %-d, %Y" }} &middot
               {{ wordcount | divided_by: 200 }} min read
-              {% if p.tags.size > 0 %} &middot {{ p.tags | join: " &middot " }} {% endif %}
+              {% if post.tags.size > 0 %} &middot {{ post.tags | join: " &middot " }} {% endif %}
             </p>
           </div>
           <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 200 }}</p>
