--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <!-- Filler column -->
     <div class="column"></div>
     <!-- Center content column -->
-    <div class="column is-full-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+    <div class="column is-full-mobile is-two-thirds-tablet is-three-fifths-desktop is-three-fifths-widescreen is-three-fifths-fullhd">
       {% include header.html %}
       {% include body.html %}
     </div>
