rm netlify form config

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -10,7 +10,7 @@ layout: default
   <div class="column"></div>
 
   <div class="column is-two-thirds">
-    <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+    <form name="contact" method="POST">
       <div class="field">
         <label class="label">Name</label>
         <div class="control has-icons-left has-icons-right">
