--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,7 @@
 
     <!-- RSS Feed -->
     <a href="{{ site.baseurl }}/feed.xml">
-      <figure class="image is-24x24 is-inline-block">
-        <img src="{{site.baseurl}}/assets/img/rss_icon.png">
-      </figure>
+      <i class="fa-rss fa"></i>
     </a>
 
   </div>
