--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,9 @@
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/6df62b7563.js" crossorigin="anonymous"></script>
 
+  <!-- Fontawesome RSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
