--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -46,7 +46,9 @@ layout: default
         </div>
 
 
-        <div class="container has-text-centered" data-netlify-recaptcha="true"></div>
+        <div class="container has-text-centered">
+          <div data-netlify-recaptcha="true"></div>
+        </div>
 
         <div class="field">
           <div class="control has-text-centered">
