--- a/_layouts/subscribe.html
+++ b/_layouts/subscribe.html
@@ -20,7 +20,9 @@ layout: default
           </div>
         </div>
 
-        <div class="container has-text-centered" data-netlify-recaptcha="true"></div>
+        <div class="container has-text-centered">
+          <div data-netlify-recaptcha="true"></div>
+        </div>
 
         <div class="field">
           <div class="control has-text-centered">
