--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
+  <!-- RSS Feed -->
+  <link rel="alternate" href="{{ site.url }}/feed.xml">
+
 </head>
