--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,8 @@ layout: default
 
 <section class="section">
 
-  {% assign rows = 4 %}
+  <!-- {% assign rows = 4 %} -->
+  {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
   {% for i in (1..rows) %}
     {% assign offset = forloop.index0 | times: 2 | plus: 0 %}
 
@@ -21,6 +22,9 @@ layout: default
             <p class="is-size-6" style="margin: 0 0">
               {{ post.date | date: "%B %-d, %Y" }} &middot
               {{ wordcount | divided_by: 200 }} min read
+            </p>
+            <p class="is-size-6" style="margin: 0 0">
+              by {{ site.author }}
             </p>
             {% if post.tags.size > 0 %}
               <p style="margin: 0 0">{{ post.tags | join: " &middot " }}</p>
