--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       <p class="title is-4" style="margin: 0 0 0.5em 0">{{ page.title }}</p>
       <p class="subtitle is-6" style="margin: 0 0 1em 0">{{ page.date | date: "%B %-d, %Y" }} by {{ site.author }}</p>
 
-      {% if page.audio %}
+      {% if page.spotify %}
         <a href="{{ site.spotify }}" target="_blank">
           <img class="image is-inline-block" src="/assets/img/spotify/PNG/spotify-podcast-badge-wht-blk-165x40.png" alt="">
         </a>
