--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,34 +2,18 @@
 layout: default
 ---
 
-<section class="section">
 
-  <!-- {% assign rows = 4 %} -->
-  {% assign rows = site.posts.size | divided_by: 2.0 | ceil %}
-  {% for i in (1..rows) %}
-    {% assign offset = forloop.index0 | times: 2 | plus: 0 %}
+{% for post in site.posts limit: 4 %}
 
-    <div class="columns">
-      {% for post in site.posts limit:2 offset:offset %}
+  {% capture wordcount %}
+    {{ post.content | number_of_words }}
+  {% endcapture %}
 
-        {% capture wordcount %}
-          {{ post.content | number_of_words }}
-        {% endcapture %}
+  <a class="title is-5" style="margin: 0 0 0.5em 0" href="{{ post.url }}">{{ post.title }}</a>
+  <p class="is-size-6" style="margin: 0 0 1em 0">
+    {{ post.date | date: "%B %-d, %Y" }} &middot {{ site.author }} &middot {{ wordcount | divided_by: 200 }} min read
+  </p>
+  <p class="is-size-6" style="margin: 0 0 0">{{ post.content | strip_html | strip_newlines | truncate: 300 }}</p>
 
-        <div class="column">
-          <div class="container has-text-centered">
-            <a class="title is-5" href="{{ post.url }}">{{ post.title }}</a>
-            <p class="is-size-6" style="margin: 0 0">
-              {{ post.date | date: "%B %-d, %Y" }} &middot
-              {{ site.author }} &middot
-              {{ wordcount | divided_by: 200 }} min read
-            </p>
-          </div>
-          <p class="is-size-6" style="margin: 0 0 0;">{{ post.content | strip_html | strip_newlines | truncate: 300 }}</p>
-        </div>
-      {% endfor %}
-    </div>
-
-  {% endfor %}
-
-</section>
+  <br>
+{% endfor %}
