--- a/_sass/mystyles.scss
+++ b/_sass/mystyles.scss
@@ -19,6 +19,7 @@ $title-family: $family-serif;
 $title-weight: $weight-normal;
 
 $navbar-padding-horizontal: 4em;
+$section-padding: 1em;
 
 // Import only what you need from Bulma
 @import "sass/base/_all.sass";
