--- a/assets/css/mystyles.css
+++ b/assets/css/mystyles.css
@@ -3153,7 +3153,7 @@ a.box:active {
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #3273dc; }
 
 .section {
-  padding: 3rem 1.5rem; }
+  padding: 1em; }
   @media screen and (min-width: 1024px) {
     .section.is-medium {
       padding: 9rem 1.5rem; }
