--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -6,11 +6,11 @@
     {% if page.previous.url %}
       <div class="container">
         <a href="{{ page.previous.url | prepend: site.baseurl }}">
-          <p class="title is-5" style="margin: 0 0 0 0">
-            {{ page.previous.title }}
+          <p class="subtitle is-5" style="margin: 0 0 0 0">
+            Previous Post
           </p>
         </a>
-        <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
+        <!-- <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p> -->
       </div>
     {% endif %}
   </div>
@@ -19,11 +19,11 @@
     {% if page.next.url %}
       <div class="container" style="text-align:right">
         <a href="{{ page.next.url | prepend: site.baseurl }}">
-          <p class="title is-5" style="margin: 0 0 0 0">
-            {{ page.next.title }}
+          <p class="subtitle is-5" style="margin: 0 0 0 0">
+            Next Post
           </p>
         </a>
-        <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
+        <!-- <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p> -->
       </div>
     {% endif %}
   </div>
