--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,9 @@
 
+<img class="image" src="/assets/img/headshot-pencil.jpg" alt="">
+
 {% for page in site.data.pages %}
 <a target="{% if page.external %} _blank {% endif %}" href="{{ page.link }}">
-  <p class="title is-5" style="margin: 0 0 0 0">
+  <p class="title is-6" style="margin: 0 0 0 0">
     {{ page.name }}
   </p>
 </a>
