--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@ layout: default
   {% if page.podcast %}
     <a target="_blank" href="{{ site.spotify }}">Spotify</a>
     &middot; <a target="_blank" href="{{ site.apple_podcasts }}">Apple Podcasts</a>
+    &middot; <a target="_blank" href="{{ site.anchor_link }}">Anchor</a>
   {% endif %}
 </p>
 
