--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@ layout: default
     {% if post.podcast %}
       <a target="_blank" href="{{ site.spotify }}">Spotify</a>
       &middot; <a target="_blank" href="{{ site.apple_podcasts }}">Apple Podcasts</a>
+      &middot; <a target="_blank" href="{{ site.anchor_link }}">Anchor</a>
     {% endif %}
   </p>
   <p class="is-size-6">
