--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -7,10 +7,9 @@
       <div class="container">
         <a href="{{ page.previous.url | prepend: site.baseurl }}">
           <p class="subtitle is-5" style="margin: 0 0 0 0">
-            Previous Post
+            Previous
           </p>
         </a>
-        <!-- <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p> -->
       </div>
     {% endif %}
   </div>
@@ -20,10 +19,9 @@
       <div class="container" style="text-align:right">
         <a href="{{ page.next.url | prepend: site.baseurl }}">
           <p class="subtitle is-5" style="margin: 0 0 0 0">
-            Next Post
+            Next
           </p>
         </a>
-        <!-- <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p> -->
       </div>
     {% endif %}
   </div>
