--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -22,10 +22,11 @@ layout: default
     {% if post.podcast %}
       <a target="_blank" href="{{ site.spotify }}">Spotify</a>
       &middot; <a target="_blank" href="{{ site.apple_podcasts }}">Apple Podcasts</a>
+      &middot; <a target="_blank" href="{{ site.anchor_link }}">Anchor</a>
     {% endif %}
   </p>
   <p class="is-size-6">
     {{ post.content | strip_html | strip_newlines | truncate: 300 }}
   </p>
-  
+
 {% endfor %}
