--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,33 @@
 
 <html lang="en">
 
-  {% include head.html %}
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="{{ site.author }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{{ site.title }}</title>
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/assets/css/mystyles.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-144214802-3');
+    </script>
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+  </head>
 
   <header>
     <div class="container has-text-centered">
@@ -15,9 +41,7 @@
         <a href={{ page.link }} target="{% if page.external %}_blank{% endif %}">
            {{ page.name }}
         </a>
-        {% unless forloop.last %}
-          &middot;
-        {% endunless %}
+        {% unless forloop.last %}&middot;{% endunless %}
       {% endfor %}
     </div>
   </header>
@@ -32,25 +56,10 @@
           {{ content }}
         </div>
 
-        <!-- <div class="column is-2">
-          {% include sidebar.html %}
-        </div> -->
-
         <div class="column"></div>
 
       </div>
     </section>
   </body>
-
-  <footer style="padding: 2rem 3rem" class="footer has-background-white">
-    <div class="container has-text-centered">
-
-      <!-- RSS Feed -->
-      <a href="{{ site.baseurl }}/feed.xml">
-        <i class="fa-rss fa"></i>
-      </a>
-
-    </div>
-  </footer>
 
 </html>
