--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <title>{{ site.title }}</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/mystyles.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
@@ -22,7 +22,7 @@
 
       gtag('config', 'UA-144214802-3');
     </script>
-    
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
