--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4873,4 +4873,4 @@ a.navbar-item,
   .control.is-loading.is-large:after {
     font-size: 1.5rem; }
 
-/*# sourceMappingURL=mystyles.css.map */
+/*# sourceMappingURL=main.css.map */
